# cuFHE16384

./: .gitignore  CMakeLists.txt  README.md
cufhe/: Makefile
cufhe/include/: cufhe.h  cufhe_core.h
cufhe/include/ntt_gpu/: ntt.cuh  ntt_1024_device.cuh  ntt_ffp.cuh  ntt_single_thread.cuh
cufhe/lib/: bootstrap_gpu.cu  cufhe.cc
cufhe/lib/ntt_gpu/: ntt_1024_twiddle.cu
cufhe/test/: test_api_gpu.cu  test_ntt_gpu.cu
